rspec change admin

--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -17,3 +17,6 @@
 		<%= f.submit "変更を保存する" ,class:"btn btn-primary"%>
 	<% end %>
 </div>
+
+<label for="apple"><input type="radio" name="fruits" value="apple" id="apple" checked>アップル</label>
+<label for="pineapple"><input type="radio" name="fruits" value="pineapple" id="pineapple">パイナップル</label>
