Add gem ransack

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.topick_create {
+	color: #000;
+}
+
 html{
 	min-height:100%;
 	position:relative;
