add file follow_js

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 
-	<div class="text-center"><%= render "relationships/follow", customer: @customer %></div>
+	<div class="follow_js text-center"><%= render "relationships/follow", customer: @customer %></div>
 	<% if current_customer == @customer %>
 		<p class="btn inqbtn"><a>管理者からの回答</a></p>
 		<table class="inquiry table">
