--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,11 +1,11 @@
 <% unless current_customer == customer %>
 	<% if current_customer.following?(customer) %>
-		<%= form_for(current_customer.relationships.find_by(follow_id: customer.id),html: {method: :delete}) do |f| %>
+		<%= form_for(current_customer.relationships.find_by(follow_id: customer.id),remote:true, html: {method: :delete}) do |f| %>
 			<%= hidden_field_tag :follow_id, customer.id %>
 			<%= f.submit "フォロー解除", class: "btn btn-danger" %>
 		<% end %>
 	<% else %>
-		<%= form_for(current_customer.relationships.build) do |f| %>
+		<%= form_for(current_customer.relationships.build, remote:true) do |f| %>
 			<%= hidden_field_tag :follow_id, customer.id %>
 			<%= f.submit "フォローします", class: "btn btn-info" %>
 		<% end %>
