--- a/app/views/admins/gest_inquiries/show.html.erb
+++ b/app/views/admins/gest_inquiries/show.html.erb
@@ -9,7 +9,8 @@
 	<%= e.submit "変更" %>
 	<% end %>
 </div>
-<%= form_for(@answer,url:admins_answers_path) do |f| %>
-	<%= f.text_area :answer %>
+<%= form_for(@gest_answer,url:admins_gest_answers_path) do |f| %>
+	<%= f.text_area :gest_answer %>
+	<%= f.hidden_field :gest_inquiry_id ,:value =>@gest_inquiry.id %>
 	<%= f.submit "送信" %>
 <% end %>
