--- a/app/views/topicks/about.html.erb
+++ b/app/views/topicks/about.html.erb
@@ -22,8 +22,8 @@
 	</div>
 </div> -->
 
-<div class="a">
+<!-- <div class="a">
 	<div class="b">1</div>
 	<div class="b">2</div>
 	<div class="b">3</div>
-</div>
+</div> -->
