--- a/app/views/topicks/top.html.erb
+++ b/app/views/topicks/top.html.erb
@@ -1,11 +1,16 @@
 <div class="main-top">
 	<p class="notice"><%= flash[:notice] %></p>
-	<%#= image_tag "img/main2.jpg" %
-	<%= image_tag "img/main3.jpg" %
-	<%= image_tag "img/main4.jpg" %>
-	<h1 class="toph1"><b>ようこそ</b></h1>
-	<h4 class="toph2"><b>あなただけのお話聞かせてくれませんか？</b></h4>
-	<h3><span class="toph3"><b>SukiSp</b></span><span class="toph4">はあなたのお話を待っています。</span></h3>
+	<div class="main-contents">
+		<h1 class="toph1"><b>ようこそ</b></h1>
+		<h4 class="toph2"><b>あなただけのお話聞かせてくれませんか？</b></h4>
+		<h3><span class="toph3"><b>SukiSp</b></span><span class="toph4">はあなたのお話を待っています。</span></h3>
+	</div>
+	<div class="theTarget">
+		<div class="main1"></div>
+		<div class="main2"></div>
+		<div class="main3"></div>
+		<div class="main4"></div>
+	</div>
 	<div class="main1"></div>
 </div>
 
