--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,36 @@
 					<% end %></h4>
 				<% end %>
 		</div>
+		<div id="sp-menu">
+			<ul>
+				<%if customer_signed_in? %>
+					<li><%= link_to "ジャンル", genres_path %></li>
+					<li><%= link_to "話題", topicks_path %></li>
+					<li><%= link_to "マイページ", current_customer %></li>
+					<li><%= link_to "ログアウト",destroy_customer_session_path, method: :delete %>
+					</li>
+					<% else %>
+					<li><%= link_to "ジャンル", genres_path %>
+					</li>
+					<li><%= link_to "話題", topicks_path %>
+					</li>
+					<li><%= link_to "ログイン | 新規登録", new_customer_session_path %>
+					</li>
+					<li><%= link_to "アバウトページ",about_topicks_path %> </li>
+				<% end %>
+			</ul>
+		</div>
+
+		<div id="hm-icon">
+			<a class="menu-trigger" href="#">
+				<span></span>
+				<span></span>
+				<span></span>
+			</a>
+		</div>
+
   		<nav>
-				<ul class="toph4 nav navb-tabs nav-justified ">
+				<ul class="toph4 nav navb-tabs nav-justified hidden-xs">
 				<% if admin_signed_in? %>
 					<li><%= link_to "ジャンル一覧", admins_genres_path %></li>
 					<li><%= link_to "話題一覧", admins_topicks_path %></li>
