--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,14 +14,19 @@
 		</div>
 		<div id="sp-menu">
 			<ul>
-				<%if customer_signed_in? %>
-					<li><%= link_to "ジャンル", genres_path %></li>
+				<% if admin_signed_in? %>
+					<li><%= link_to "ジャンル一覧", admins_genres_path %></li>
+					<li><%= link_to "話題一覧", admins_topicks_path %></li>
+					<li><%= link_to "会員一覧",admins_customers_path %></li>
+					<li><%= link_to "ログアウト",destroy_admin_session_path,method: :delete %></li>
+				<%elsif customer_signed_in? %>
+					<li><a><%= link_to "ジャンル", genres_path %></a></li>
 					<li><%= link_to "話題", topicks_path %></li>
 					<li><%= link_to "マイページ", current_customer %></li>
 					<li><%= link_to "ログアウト",destroy_customer_session_path, method: :delete %>
 					</li>
 					<% else %>
-					<li><%= link_to "ジャンル", genres_path %>
+					<li><a><%= link_to "ジャンル", genres_path %></a>
 					</li>
 					<li><%= link_to "話題", topicks_path %>
 					</li>
@@ -32,7 +37,7 @@
 			</ul>
 		</div>
 
-		<div id="hm-icon">
+		<div id="hm-icon" class="visible-xs">
 			<a class="menu-trigger" href="#">
 				<span></span>
 				<span></span>
