--- a/app/assets/stylesheets/topicks.scss
+++ b/app/assets/stylesheets/topicks.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the topicks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.field {
+	margin-bottom:5px;
+}
+.topick_box {
+	padding:0 60px;
+}
