--- a/app/views/topicks/new.html.erb
+++ b/app/views/topicks/new.html.erb
@@ -1,5 +1,8 @@
-<div class="text-center well" style="background-color: #fff">
-<h1 style="color: #01b8be">話題新規作成</h1>
+<div class="text-center">
+	<h1 style="color: #01b8be">話題新規作成</h1>
+</div>
+<div class="well" style="background-color: #fff">
+	<div class="topick_box">
 	<% if @topick.errors.any? %>
 		<h2 class="text-danger"><%= @topick.errors.count %>つのエラー</h2>
 			<ul class="text-danger">
@@ -8,17 +11,25 @@
 				<%end%>
 			<%end%></ul>
 	<%= form_for @topick, url: topicks_path  do |f|  %>
-	<div class="row">
-		<div class="col-xs-6 text-right">
-			<p>ジャンルを選択:     <%= f.collection_select(:genre_id, Genre.where(is_valid: true), :id, :genre_name) %></p>
-		<p>話題名:<%= f.text_field :topick_name %></p>
-		<p>内容:<%= f.text_area :introduction %></p>
-	</div>
-	<div class="col-xs-6">
-			<p><%= f.attachment_field :topick_images_topick_images, multiple: true %></p>
-<%= f.submit "登録" %>
+		<div class="field">
+			<%= f.label :ジャンル%><br>
+			<%= f.collection_select(:genre_id, Genre.where(is_valid: true), :id, :genre_name) %>
+		</div>
+		<div class="field">
+			<%= f.label :話題名 %><br>
+			<%= f.text_field :topick_name %>
+		</div>
+		<div class="field">
+			<%=f.label :内容 %><br>
+			<%= f.text_area :introduction ,size:"50x5"%>
+		</div>
+		<div class="field">
+				<%= f.attachment_field :topick_images_topick_images, multiple: true %>
+			</div>
+			<div class="text-center">
+			<%= f.submit "登録" %>
+		</div>
 		<% end %>
-	</div>
-	</div>
+</div>
 </div>
 
