--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,26 +1,40 @@
-<div class="text-center well" style="background-color: #fff">
+<div class="text-center">
 	<h1 style="color: #01b8be">プロフィール編集</h1>
-	<% if @customer.errors.any? %>
-		<h2 class="text-danger"><%= @customer.errors.count %>つのエラー</h2>
-		<ul class="text-danger">
-			<% @customer.errors.full_messages.each do |message|%>
-			<li><%= message %></li>
-			<%end%>
-		</ul>
-	<%end%>
-	<%= form_for(@customer) do |f| %>
-	<div class="row">
-		<div class="col-xs-6 text-right">
-			<p>名前:     <%= f.text_field :name %></p>
-			<p>ニックネーム:<%= f.text_field :public_name %></p>
-			<p>自己紹介:<%= f.text_area :self_introduction %></p>
-			<p>E-mail:  <%= f.text_field :email %></p>
+</div>
+<div class="well" style="background-color: #fff">
+	<div class="topick_box">
+		<% if @customer.errors.any? %>
+			<h2 class="text-danger"><%= @customer.errors.count %>つのエラー</h2>
+			<ul class="text-danger">
+				<% @customer.errors.full_messages.each do |message|%>
+				<li><%= message %></li>
+				<%end%>
+			</ul>
+		<%end%>
+
+	　	<%= form_for(@customer) do |f| %>
+		<div class="field">
+			<span class="topick_lavel"><%= f.label :名前 %></span><br>
+			<%= f.text_field :name %>
 		</div>
-		<div class="col-xs-6">
-			<p><%= f.attachment_field :profile_image %></p>
-		<%= f.submit "更新" %>
-	<% end %>
+		<div class="field">
+			<span class="topick_lavel"><%= f.label :ニックネーム %></span><br><%= f.text_field :public_name %></span><br>
 		</div>
+		<div class="field">
+			<span class="topick_lavel"><%=f.label "E-mail" %></span><br>
+			<%= f.text_field :email%>
+		</div>
+		<div class="field">
+			<span class="topick_lavel"><%=f.label :自己紹介 %></span><br>
+			<%= f.text_area :self_introduction ,size:"50x5"%>
+		</div>
+		<div class="field">
+				<%= f.attachment_field :profile_image %>
+			</div>
+			<div class="text-center">
+			<%= f.submit "更新" %>
+		</div>
+		<% end %>
 	</div>
 </div>
 
