--- a/app/views/topicks/new.html.erb
+++ b/app/views/topicks/new.html.erb
@@ -24,7 +24,10 @@
 			<%= f.text_area :introduction ,size:"50x5"%>
 		</div>
 		<div class="field">
-				<%= f.attachment_field :topick_images_topick_images, multiple: true %>
+			<img id="file-preview" src="/imges/no image.png" style="width:200px">
+		</div>
+		<div class="field">
+				<%= f.attachment_field :topick_images_topick_images, multiple: true,id: :file_sample %>
 			</div>
 			<div class="text-center">
 			<%= f.submit "登録" %>
