--- a/app/views/topicks/edit.html.erb
+++ b/app/views/topicks/edit.html.erb
@@ -23,8 +23,11 @@
 			<span class="topick_lavel"><%=f.label :内容 %></span><br>
 			<%= f.text_area :introduction ,size:"50x5"%>
 		</div>
+		<div>
+			<%= image_tag "no image.png" ,id: :file_prevew ,size: "250x150" %>
+		</div>
 		<div class="field">
-				<%= f.attachment_field :topick_images_topick_images, multiple: true %>
+				<%= f.attachment_field :topick_images_topick_images, multiple: true,id: :file_sample %>
 			</div>
 			<div class="text-center">
 			<%= f.submit "編集する" %>
