--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,6 +105,20 @@ header a:hover{
 	position: relative;
 	margin-bottom:30px;
 }
+.flowing p {
+	margin:0;
+	padding-left:600px;
+	display:inline-block;
+	white-space:nowrap;
+	animation-name:flowing;
+	animation-timing-function:linear;
+	animation-duration:10s;
+	animation-iteration-count:infinite;
+}
+@keyframes flowing {
+	from {transform:translate(0%);}
+	99%,to {transform:translate(-100%);}
+}
 .main1 {
 	background-image: image-url("img/main1.jpg");
 }
