--- a/app/views/topicks/top.html.erb
+++ b/app/views/topicks/top.html.erb
@@ -39,23 +39,21 @@
 			<div class="day-topiick  ">
 				<div class=" text-center panel-header" style="font-size: 20px;">最近の話題</div>
 				<% @recently_topicks.first(5).each do |recently| %>
-				<%= link_to topick_path(recently),:style =>"color:#000" do %>
-				<table class="table table-hover" style="overflow-y: auto ">
+				<table class="table table-hover">
 					<tbody>
 						<tr>
 							<td class="col-xs-3">
-								<%= recently.created_at.to_s(:datetime_jp) %>
+								<%=link_to recently.created_at.to_s(:datetime_jp),topick_path(recently),:style =>"color:#000" %>
 							</td>
 							<td class="col-xs-2">
-								<%= recently.genre.genre_name %>
+								<%= link_to recently.genre.genre_name,topick_path(recently),:style =>"color:#000" %>
 							</td>
 							<td class="col-xs-7">
-								<span style="text-decoration: underline;"><%= recently.topick_name %></span>
+								<%=link_to recently.topick_name,topick_path(recently),:style =>"color:#000" %>
 							</td>
 						</tr>
 					</tbody>
 				</table>
-				<% end %>
 				<% end %>
 				<%= link_to "その他の話題はこちらへ",topicks_path %>
 			</div>
