--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,6 +146,10 @@ header a:hover{
 .news-line {
 	background-image: image-url("img/main2.jfif");
 	background-size:cover;
+	margin-bottom:10px;
+}
+.news-line h1{
+	padding-top:8px;
 }
 .box {
 	margin-top:10px;
