--- a/app/views/topicks/index.html.erb
+++ b/app/views/topicks/index.html.erb
@@ -5,7 +5,7 @@
 	</div>
 	<div class="find">
 		<%= search_form_for @search do |f|%>
-		<%= f.search_field :topick_name_or_customers_public_name_cont %>
+		<%= f.search_field :topick_name_cont %>
 		<%= f.submit "検索" %>
 		<%end%>
 	</div>
